Я не знал что нужно было отправлять задание с гифи апи. Извиняюсь за задержку

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
         Приносим извинения за сей дизайн.
       </div>
     </div>
+    <div class="main-container2">
+      <form class="form">
+        <div class="searchbar">
+          <input type="text" class="search-text" required /><button
+            class="button2"
+          >
+            Search
+          </button>
+        </div>
+      </form>
+      <img src="" alt="gif" class="gif" />
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
